--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -5,17 +5,22 @@
     {% include meta.html %}
   </head>
   <body>
-    <div class="main-div">
-      <div class="page-title">{{ page_title }}</div>
+    <div class="main-div list-main-div">
+      <a href="{{ site.baseurl }}/"><div class="home-title">{{ site.title }}</div></a>
+      <div class="page-title">{{ page.title }}</div>
       <div class="page-content">
         {% assign groups = 'processos,categorias,ingredientes' | split: ',' %}
         {% for g in groups %}
           {% for item in page[g] %}
             {% if site.data.glossario[g][item] %}
-              <div>
-                <b>{{ item }}</b><br>
-                {{ site.data.glossario[g][item].img }}<br>
-                {{ site.data.glossario[g][item].txt }}
+              <div class="list-item">
+                <div class="list-image">
+                  <img src="{{ site.baseurl }}{{ site.data.glossario[g][item].img }}">
+                </div>
+                <div class="list-text">
+                  <div class="list-text-title">{{ item }}</div>
+                  {{ site.data.glossario[g][item].txt }}
+                </div>
               </div>
             {% endif %}
           {% endfor %}
