--- a/css/main.scss
+++ b/css/main.scss
@@ -79,9 +79,15 @@ a {
 .main-div {
   display: block;
   width: 80%;
-  margin: 0 auto;
   box-sizing: border-box;
   margin: $RESPONSIVE-SPACING auto;
+
+  .home-title {
+    border-bottom: 1px #000 dashed;
+    margin: $RESPONSIVE-SPACING auto;
+    font: 900 3*$TITLE-SIZE $FONT-TITLE;
+    text-align: center;
+  }
 
   .page-title {
     font: 900 $TITLE-SIZE $FONT-TITLE;
@@ -108,13 +114,110 @@ a {
   }
 }
 
+.home-main-div {
+  .home-title {
+    font: 900 5*$TITLE-SIZE $FONT-TITLE;
+  }
+
+  .jar-item {
+    width: 100%;
+    left: 0;
+    top: 0;
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.home-jar-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 12%;
+
+  .jar-overlay {
+    width: 12%;
+    position: relative;
+    cursor: pointer;
+    opacity: 1;
+    transition: opacity $TRANSITION-PERIOD-ICON linear;
+
+    &:hover {
+      opacity: 0.5;
+    }
+
+    .jar-item {
+      position: absolute;
+    }
+  }
+
+  .jar-selected {
+    opacity: 0.5;
+  }
+}
+
+.home-jar-navigation {
+  width: 80%;
+  max-height: 0;
+  opacity: 0;
+  margin: 32px auto 0;
+  display: flex;
+  flex-direction: row;
+  transition: max-height $TRANSITION-PERIOD-HOME linear, opacity $TRANSITION-PERIOD-HOME $TRANSITION-PERIOD-HOME linear;
+
+  .jar-item {
+    position: relative;
+    width: 30%;
+    cursor: none;
+    pointer-events: none;
+    opacity: 1;
+    transition: opacity $TRANSITION-PERIOD-ICON linear;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  .jar-navigation-title {
+    text-align: center;
+    text-transform: uppercase;
+    font: 900 $TITLE-SIZE $FONT-TITLE;
+  }
+}
+
+.list-main-div {
+  .list-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 80%;
+    margin: 5% 0;
+
+    .list-image {
+      width: 20%;
+      img {
+        width: 100%;
+      }
+    }
+
+    .list-text {
+      padding: 8px 5%;
+      .list-text-title {
+        text-transform: uppercase;
+        font-weight: 900;
+      }
+    }
+  }
+}
+
 .footer {
   margin: 0 auto;
   box-sizing: border-box;
   width: 80%;
   padding: 12px 0;
   border-top: 1px #000 dashed;
-  
+
   .footer-line {
     line-height: 1.7;
     vertical-align: middle;
