--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
   <div class="footer">
     <div class="footer-line">Apoio/Support:</div>
     <a href="https://silo.org.br/" target="_blank">
-      <div class="footer-line silo-logo" style="background-image: url('{{ site.baseurl }}/media/images/logos/silo.svg');"></div>
+      <div class="footer-line silo-logo" style="background-image: url('{{ site.baseurl }}/media/logos/silo.svg');"></div>
     </a>
   </div>
 {% endif %}
