simplifies home navigation scripts AND removes separate pages for content

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,16 +25,16 @@
       </div>
 
       <div class="home-jar-navigation">
-        <a href="{{ site.baseurl }}/kombucha/ingredientes/" id="jar-ingredientes" class="jar-item">
+        <div class="jar-item" id="jar-ingredientes">
           <img src="{{ site.baseurl }}/media/icons/kombucha/ingredientes.png">
-        </a>
-        <a href="{{ site.baseurl }}/kombucha/" id="jar-receita" class="jar-item">
+        </div>
+        <div class="jar-item" id="jar-receita">
           <img src="{{ site.baseurl }}/media/icons/jar.png">
           <div class="jar-navigation-title" id="jar-title"></div>
-        </a>
-        <a href="{{ site.baseurl }}/kombucha/mapa/" id="jar-mapa" class="jar-item">
+        </div>
+        <div class="jar-item" id="jar-mapa">
           <img src="{{ site.baseurl }}/media/icons/kombucha/mapa.png">
-        </a>
+        </div>
       </div>
     </div>
     {% include footer.html %}
