--- a/css/main.scss
+++ b/css/main.scss
@@ -116,13 +116,17 @@ a {
 
 .home-main-div {
   .home-title {
-    font: 900 5*$TITLE-SIZE $FONT-TITLE;
+    font: 900 2*$TITLE-SIZE $FONT-TITLE;
+    @include media-query(DESKTOP) {
+      font-size: 8vw;
+    }
   }
 
   .jar-item {
     width: 100%;
     left: 0;
     top: 0;
+    cursor: pointer;
     img {
       width: 100%;
     }
@@ -139,7 +143,6 @@ a {
   .jar-overlay {
     width: 12%;
     position: relative;
-    cursor: pointer;
     opacity: 1;
     transition: opacity $TRANSITION-PERIOD-ICON linear;
 
@@ -164,13 +167,12 @@ a {
   margin: 32px auto 0;
   display: flex;
   flex-direction: row;
+  overflow: hidden;
   transition: max-height $TRANSITION-PERIOD-HOME linear, opacity $TRANSITION-PERIOD-HOME $TRANSITION-PERIOD-HOME linear;
 
   .jar-item {
     position: relative;
     width: 30%;
-    cursor: none;
-    pointer-events: none;
     opacity: 1;
     transition: opacity $TRANSITION-PERIOD-ICON linear;
 
@@ -186,27 +188,25 @@ a {
   }
 }
 
-.list-main-div {
-  .list-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 80%;
-    margin: 5% 0;
+.list-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 80%;
+  margin: 5% 0;
 
-    .list-image {
-      width: 20%;
-      img {
-        width: 100%;
-      }
+  .list-image {
+    width: 20%;
+    img {
+      width: 100%;
     }
+  }
 
-    .list-text {
-      padding: 8px 5%;
-      .list-text-title {
-        text-transform: uppercase;
-        font-weight: 900;
-      }
+  .list-text {
+    padding: 8px 5%;
+    .list-text-title {
+      text-transform: uppercase;
+      font-weight: 900;
     }
   }
 }
