--- a/_includes/ingredientes.html
+++ b/_includes/ingredientes.html
@@ -1,6 +1,6 @@
 {% assign groups = 'processos,categorias,ingredientes' | split: ',' %}
 {% for g in groups %}
-{% for item in page[g] %}
+{% for item in include.page[g] %}
 {% if site.data.glossario[g][item] %}
   <div class="list-item">
     <div class="list-image">
