refactors receita icons to have one per jar

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@
               <img src="{{ site.baseurl }}/media/icons/{{ p.slug }}/ingredientes.png">
             </div>
             <div class="jar-item">
-              <img src="{{ site.baseurl }}/media/icons/jar.png">
+              <img src="{{ site.baseurl }}/media/icons/{{ p.slug }}/receita.png">
             </div>
             <div class="jar-item">
               <img src="{{ site.baseurl }}/media/icons/{{ p.slug }}/mapa.png">
@@ -29,7 +29,7 @@
           <img src="{{ site.baseurl }}/media/icons/kombucha/ingredientes.png">
         </div>
         <div class="jar-item" id="jar-receita">
-          <img src="{{ site.baseurl }}/media/icons/jar.png">
+          <img src="{{ site.baseurl }}/media/icons/kombucha/receita.png">
           <div class="jar-navigation-title" id="jar-title"></div>
         </div>
         <div class="jar-item" id="jar-mapa">
