removes slug from page titles

--- a/_includes/ingredientes.html
+++ b/_includes/ingredientes.html
@@ -1,6 +1,6 @@
 {% assign groups = 'processos,categorias,ingredientes' | split: ',' %}
 {% if include.page.ingredientes %}
-  <div class="content-title">Ingredientes: {{ include.page.slug }}</div>
+  <div class="content-title">Ingredientes</div>
 {% endif %}
 
 {% for g in groups %}
