--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src 'self' data: www.google-analytics.com; media-src 'self'; frame-src player.vimeo.com www.youtube.com gallery.autodesk.com; frame-ancestors 'self'; script-src 'self' ajax.googleapis.com www.google-analytics.com; font-src 'self' data: maxcdn.bootstrapcdn.com fonts.googleapis.com fonts.gstatic.com; style-src 'self' 'unsafe-inline' maxcdn.bootstrapcdn.com fonts.googleapis.com; base-uri 'self'; form-action 'self';">
 
+<link rel="stylesheet" href="{{ site.baseurl }}/css/fonts.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
