--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,14 +1,13 @@
 $FONT-TEXT: 'Open Sans', sans-serif;
-$FONT-MENU: $FONT-TEXT;
-$FONT-TITLE: $FONT-TEXT;
+$FONT-TITLE: 'Wunderland', sans-serif;
 
 $MENU-ITEM-SIZE: 0.8rem;
 
-$TITLE-SIZE: 1.1rem;
+$TITLE-SIZE: 2.5rem;
 $TEXT-SIZE: 0.9rem;
 $LINK-SIZE: 1.3rem;
 
-$TITLE-SIZE-MOBILE: 0.8rem;
+$TITLE-SIZE-MOBILE: 1.5rem;
 $TEXT-SIZE-MOBILE: 0.8rem;
 $LINK-SIZE-MOBILE: 1rem;
 
