--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,28 +3,70 @@
 
 @font-face {
     font-family: Wunderland;
-    src: url({{ site.baseurl }}/media/fonts/im_wunderland/Im-Wunderland.otf) format("opentype");
+    src: url({{ site.baseurl }}/media/fonts/Im-Wunderland/Im-Wunderland.otf) format("opentype");
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: Wunderland;
-    src: url({{ site.baseurl }}/media/fonts/im_wunderland/Im-Wunderland-Bold.otf) format("opentype");
+    src: url({{ site.baseurl }}/media/fonts/Im-Wunderland/Im-Wunderland-Bold.otf) format("opentype");
     font-style: normal;
     font-weight: bold;
 }
 
 @font-face {
     font-family: Wunderland;
-    src: url({{ site.baseurl }}/media/fonts/im_wunderland/Im-Wunderland-Italic.otf) format("opentype");
+    src: url({{ site.baseurl }}/media/fonts/Im-Wunderland/Im-Wunderland-Italic.otf) format("opentype");
     font-style: italic;
     font-weight: normal;
 }
 
 @font-face {
     font-family: Wunderland;
-    src: url({{ site.baseurl }}/media/fonts/im_wunderland/Im-Wunderland-Bold-Italic.otf) format("opentype");
+    src: url({{ site.baseurl }}/media/fonts/Im-Wunderland/Im-Wunderland-Bold-Italic.otf) format("opentype");
     font-style: italic;
     font-weight: bold;
+}
+
+@font-face {
+    font-family: Montserrat;
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Regular.ttf);
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Montserrat;
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Bold.ttf);
+    font-style: normal;
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Montserrat;
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Regular-Italic.ttf);
+    font-style: italic;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Montserrat;
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Bold-Italic.ttf);
+    font-style: italic;
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Montserrat;
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Light.ttf);
+    font-style: normal;
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: Montserrat;
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Light-Italic.ttf);
+    font-style: italic;
+    font-weight: 300;
 }
