--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,5 +1,5 @@
+$FONT-TITLE: 'Wunderland', sans-serif;
 $FONT-TEXT: 'Montserrat', sans-serif;
-$FONT-TITLE: 'Wunderland', cursive;
 
 $MENU-ITEM-SIZE: 0.8rem;
 
