--- a/css/fonts.css
+++ b/css/fonts.css
@@ -31,42 +31,42 @@
 
 @font-face {
     font-family: Montserrat;
-    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Regular.ttf);
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Regular.woff) format('woff');
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: Montserrat;
-    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Bold.ttf);
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Bold.woff) format('woff');
     font-style: normal;
     font-weight: bold;
 }
 
 @font-face {
     font-family: Montserrat;
-    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Regular-Italic.ttf);
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Regular-Italic.woff) format('woff');
     font-style: italic;
     font-weight: normal;
 }
 
 @font-face {
     font-family: Montserrat;
-    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Bold-Italic.ttf);
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Bold-Italic.woff) format('woff');
     font-style: italic;
     font-weight: bold;
 }
 
 @font-face {
     font-family: Montserrat;
-    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Light.ttf);
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Light.woff) format('woff');
     font-style: normal;
     font-weight: 300;
 }
 
 @font-face {
     font-family: Montserrat;
-    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Light-Italic.ttf);
+    src: url({{ site.baseurl }}/media/fonts/Montserrat/Montserrat-Light-Italic.woff) format('woff');
     font-style: italic;
     font-weight: 300;
 }
