updates glossary and home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="recipe-search-container home-section">
-        <div>Receitas Adicionais</div>
+        <div>Receitas</div>
         <div class="recipe-search-button-container">
           {% assign groups = 'processos,categorias,ingredientes' | split: ',' %}
           {% for g in groups %}
