--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,6 +50,9 @@
       <div class="home-map-container home-section">
         <div>Mapas</div>
         <div class="home-map-image home-section-image"></div>
+        <div class="home-umap-image home-section-image">
+          <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/cozinha-nomade-serrinha-do-alambari_229503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe><p><a href="http://umap.openstreetmap.fr/en/map/cozinha-nomade-serrinha-do-alambari_229503">See full screen</a></p>
+        </div>
       </div>
 
       <div class="recipe-search-container home-section">
