--- a/css/main.scss
+++ b/css/main.scss
@@ -132,6 +132,14 @@ a {
     }
   }
 
+  .jar-item-small {
+    width: 66%;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    padding-top: 20%;
+  }
+
   .content-title {
     padding-left: 2px;
     text-transform: uppercase;
