reverts icon size; fixes merge conflict; removes 'processos' from taxonomy

--- a/_includes/ingredientes.html
+++ b/_includes/ingredientes.html
@@ -1,4 +1,4 @@
-{% assign groups = 'processos,categorias,ingredientes' | split: ',' %}
+{% assign groups = 'categorias,ingredientes' | split: ',' %}
 {% if include.page.ingredientes %}
   <div class="content-title">Ingredientes</div>
 {% endif %}
