--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,11 +56,7 @@
       <div class="home-map-container home-section">
         <div class="home-map-image home-section-image"></div>
         <div class="home-umap-image home-section-image">
-<<<<<<< HEAD
-            <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/cozinha-nomade-serrinha-do-alambari_229503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe><p><a href="http://umap.openstreetmap.fr/en/map/cozinha-nomade-serrinha-do-alambari_229503"></a></p>
-=======
-          <iframe width="100%" height="300px" frameBorder="0" src="https://umap.openstreetmap.fr/en/map/cozinha-nomade-serrinha-do-alambari_229503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe>
->>>>>>> a1f5e780e2ca922f1d7133309c90d3330d581883
+          <iframe width="100%" height="300px" frameBorder="0" src="https://umap.openstreetmap.fr/en/map/cozinha-nomade-serrinha-do-alambari_229503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
         </div>
       </div>
 
