mobile map layout; link style

--- a/_sass/constants.scss
+++ b/_sass/constants.scss
@@ -1,15 +1,18 @@
 $FONT-TITLE: 'Wunderland', sans-serif;
 $FONT-TEXT: 'Montserrat', sans-serif;
+$FONT-LINK: 'Montserrat', sans-serif;
 
 $MENU-ITEM-SIZE: 0.8rem;
 
 $TITLE-SIZE: 2.5rem;
+$SUBTITLE-SIZE: 1.75rem;
 $TEXT-SIZE: 0.9rem;
-$LINK-SIZE: 1.3rem;
+$LINK-SIZE: 1rem;
 
 $TITLE-SIZE-MOBILE: 1.5rem;
+$SUBTITLE-SIZE-MOBILE: 1.05rem;
 $TEXT-SIZE-MOBILE: 0.8rem;
-$LINK-SIZE-MOBILE: 1rem;
+$LINK-SIZE-MOBILE: 0.85rem;
 
 $BACKGROUND: rgba(255,255,255,1);
 
