--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@
 
       <div class="home-map-container home-section">
         <div class="home-map-image home-section-image"></div>
-        <div class="home-umap-image home-section-image">
+        <div class="home-umap-image">
           <iframe width="100%" height="300px" frameBorder="0" src="https://umap.openstreetmap.fr/en/map/cozinha-nomade-serrinha-do-alambari_229503?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=false&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=false&onLoadPanel=undefined&captionBar=false"></iframe>
         </div>
       </div>
