fix search title layout and wording

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="recipe-search-container home-section">
-        <div class="recipe-search-title">Procurar receitas com:</div>
+        <div class="recipe-search-title">Procurar receitas por ingrediente:</div>
         <div class="recipe-search-button-container">
           <div class="recipe-search-button-group">
             {% for item in site.data.ingredientes %}
