--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,6 @@
 {% assign description = page.content | strip_html | truncatewords: 25 %}
 
-{% assign coverimage = site.url | append: site.baseurl | append: "/media/icons/cereal/receita.png" %}
+{% assign coverimage = site.url | append: site.baseurl | append: "/media/logos/cover.jpg" %}
 
 <meta name="twitter:title" content="{{ page_title }}">
 <meta name="twitter:image" content="{{ coverimage }}">
