adds spinning loader to home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,10 @@
     {% include meta.html %}
   </head>
   <body>
+    <div class="home-loading">
+      <div class="home-loading-image"></div>
+      <div class="home-loading-text">Carregando...</div>
+    </div>
     <div class="main-div home-main-div">
       <a href="{{ site.baseurl }}/"><div class="home-title">{{ site.title }}</div></a>
 
